style.css
* {
  padding: 0;
  margin: 0;
}

#game {
  width: 500px;
  height: 200px;
  border: 1px solid;
  margin: 20px auto;
  position: relative;
  overflow: hidden;
}

#character {
  width: 20px;
  height: 50px;
  background-color: red;
  position: absolute;
  bottom: 0px;
  left: 20%;
}

#obstacle {
  animation: slide 1500ms infinite linear;
  width: 20px;
  position: absolute;
  bottom: 0px;
  left: 80%;
}

#score{
  position: absolute;
  top:10px
  left:10px
  font-size: 22px;
  font weight:bold;
}

#gameOver{
    display:none;
    position:absolute;
    width:100%;
    height:100%;
    background:rgba(0,0,0,0.7);
    color:white;
    top:0;
    left:0;

    justify-content:center;
    align-items:center;
    flex-direction:column;
}

button{
    padding:10px 20px;
    font-size:18px;
    cursor:pointer;
}

.small {
  width: 20px;
  height: 20px;
  background-color: blue;
}

.medium {
  width: 40px;
  height: 30px;
  background-color: green;
}

.large {
  width: 50px;
  height: 40px;
  background-color: yellow;
}

.jump {
  animation: jump 0.5s linear;
}

@keyframes slide {
  0%{left: 480px;}
  100%{left: -100px;}
}

@keyframes jump {
  0%{top: 150px;}
  30%{top: 100px;}
  50%{top: 70px;}
  80%{top: 100px;}
  100%{top: 150px;}
}

